tests/asm-link/empty-local-referenced/rgbasm.err
error: a component of this identifier is empty
   ╭─[ test.asm:3:4 ]
   │
 3 │ dw Referenced.
   │    ─────┬─────  
   │         ╰─────── dots cannot be trailing or consecutive
───╯
1 error generated.
